2011-01-11  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16967: [Caching framework] Remove not exising "GlobalsBackend" from config_default.php

2011-01-11  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #16878: Make t3lib_utility_Client::getBrowserInfo() aware of more operating systems (Thanks to Andreas Lappe)

2011-01-11  Jeff Segars  <jeff@webempoweredchurch.org>

	* Follow-up to #15853: Add z-index to admin panel

2011-01-10  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16951: [Performance] Speed up makeInstance() by caching getClassName() results
	* Fixed bug #15133: Rendering images with ImageMagick fails to set file permissions (Thanks to Alexander Grein)

2011-01-10  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #16172: Accessing FE in fresh install fails with RuntimeException "No database selected" (Thanks to Lars Peipmann)

2011-01-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #13695: Image output in frontend is not xhtml valid

2011-01-07  Steffen Gebert  <steffen@steffen-gebert.de>

	* Added feature #16493: Editable FlexForms require a possibility to update group access lists within update wizard (Thanks to Kai Vogel)

2011-01-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16945: htmlArea RTE: Incorrect default tab label in image insertion dialogue
	* Fixed bug #16946: htmlArea RTE: Mouse cursor should be move cursor in drag an drop tab
	* Fixed bug #16948: htmlArea RTE: Temporary files folder should not be expanded in drag & drop tab
	* Fixed bug #16904: htmlArea RTE: Trailing slash stripped from href of autolinks
	* Fixed bug #16750: htmlArea RTE: Popup layer for editing links is not resizeable in IE

2011-01-07  Ernesto Baschny  <ernst@cron-it.de>

	* Follow-up to #16857: Reverted the "renderInverted" feature and its use in the negated checkboxes

2011-01-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #16940: htmlArea RTE: Log magic image creation failures to syslog