@@ -5,6 +5,7 @@
 2011-01-11  Ernesto Baschny  <ernst@cron-it.de>
 
 	* Fixed bug #16878: Make t3lib_utility_Client::getBrowserInfo() aware of more operating systems (Thanks to Andreas Lappe)
+	* Fixed bug #16630: migrateWorkspaces in Install-Tool does not work, if extbase is not intalled
 
 2011-01-11  Jeff Segars  <jeff@webempoweredchurch.org>
 
